--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "package.json": "~2.0.1"
   },
-  "devDependencies": {},
-  "description": ""
+  "devDependencies": {}
 }
